fixed erlain z-index

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1204,6 +1204,7 @@ section#page3-wrapper{
 
 				.popout-menu{
 					position: absolute;
+					z-index: 99;
 					top:0;
 					bottom:0;
 					left:0;
